# kumigame

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  GetLibraries.cmake  README.md  conanfile.txt  cppcheck.sh  settings.toml  settings.toml.sample  suppressions.txt
assets/models/cube/: cube.mtl
assets/shaders/: cube.frag  lamp.frag  mesh.frag  mesh.vert  screen.frag  screen.vert  sprite.frag  sprite.vert  text.frag  text.vert
cmake/: Conan.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
include/: camera.hpp  direction.hpp  game.hpp  result.hpp  settings.hpp  shader.hpp  textRenderer.hpp  texture.hpp  version.hpp
include/debug/: debugConsole.hpp  glDebug.hpp  log.hpp  statsViewer.hpp
include/input/: keyState.hpp  keyboard.hpp
include/renderer/: mesh.hpp  model.hpp  shader.hpp  textRenderer.hpp  texture.hpp
src/: camera.cpp  camera.hpp  game.cpp  game.hpp  main.cpp  settings.cpp  settings.hpp  shader.cpp  textRenderer.cpp  texture.cpp  version.cpp
src/debug/: debugConsole.cpp  debugConsole.hpp  glDebug.cpp  glDebug.hpp  log.cpp  statsViewer.cpp  statsViewer.hpp
src/input/: keyState.cpp  keyboard.cpp
src/renderer/: material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  postProcess.hpp  shader.cpp  shader.hpp  textRenderer.cpp  textRenderer.hpp  texture.cpp  texture.hpp
src/util/: string.hpp
